src/objects/GDP_Phone__c.object
<CustomObject>
    <fields>
        <fullName>AIMS_ID__c</fullName>
        <externalId>true</externalId>
        <label>AIMS ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ISD_Code__c</fullName>
        <label>ISD Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone 1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Phone 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toll Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GDP Phones</relationshipLabel>
        <relationshipName>GDP_Phones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_GDP_Products_Account_View__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related GDP Products - Account View</label>
        <referenceTo>GDP_Products_Account_View__c</referenceTo>
        <relationshipLabel>GDP Phones</relationshipLabel>
        <relationshipName>GDP_Phones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STD_Code__c</fullName>
        <label>STD Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebStar_ID__c</fullName>
        <externalId>true</externalId>
        <label>WebStar ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>GDP Phone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>ISD_Code__c</columns>
        <columns>STD_Code__c</columns>
        <columns>Phone_Type__c</columns>
        <columns>AIMS_ID__c</columns>
        <columns>WebStar_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Full Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDP Phones</pluralLabel>
    <recordTypes>
        <fullName>GDP</fullName>
        <active>true</active>
        <label>GDP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>